<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="20dp"
        android:padding="20dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/charactersActivityImageView"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="@string/characters_image"
                android:src="@mipmap/ic_launcher"
                android:layout_margin="10dp"/>
            <TextView
                android:id="@+id/charactersActivityName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textSize="18sp"/>
        </LinearLayout>
        <RelativeLayout
            android:id="@+id/charactersActivityRelativeLayoutStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">
            <TextView
                android:id="@+id/charactersActivityStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status"
                android:textColor="@android:color/darker_gray"
                />

            <TextView
                android:id="@+id/charactersActivityStatusString"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_toEndOf="@+id/charactersActivityStatus"
                android:gravity="end" />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/charactersActivityRelativeLayoutSpecies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">
            <TextView
                android:id="@+id/charactersActivitySpecies"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/species"
                android:textColor="@android:color/darker_gray"
                />

            <TextView
                android:id="@+id/charactersActivitySpeciesString"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_toEndOf="@+id/charactersActivitySpecies"
                android:gravity="end" />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/charactersActivityRelativeLayoutType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">
            <TextView
                android:id="@+id/charactersActivityType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/type"
                android:textColor="@android:color/darker_gray"
                />

            <TextView
                android:id="@+id/charactersActivityTypeString"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_toEndOf="@+id/charactersActivityType"
                android:gravity="end" />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/charactersActivityRelativeLayoutGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">
            <TextView
                android:id="@+id/charactersActivityGender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gender"
                android:textColor="@android:color/darker_gray"
                />

            <TextView
                android:id="@+id/charactersActivityGenderString"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_toEndOf="@+id/charactersActivityGender"
                android:gravity="end" />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/charactersActivityRelativeLayoutOrigin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">
            <TextView
                android:id="@+id/charactersActivityOrigin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/origin"
                android:textColor="@android:color/darker_gray"
                />

            <TextView
                android:id="@+id/charactersActivityOriginString"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_toEndOf="@+id/charactersActivityOrigin"
                android:gravity="end" />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/charactersActivityRelativeLayoutLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">
            <TextView
                android:id="@+id/charactersActivityLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/last_location"
                android:textColor="@android:color/darker_gray"
                />

            <TextView
                android:id="@+id/charactersActivityLocationString"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_toEndOf="@+id/charactersActivityLocation"
                android:gravity="end" />
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/charactersActivityRelativeLayoutCreated"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">
            <TextView
                android:id="@+id/charactersActivityCreated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/created"
                android:textColor="@android:color/darker_gray"
                />

            <TextView
                android:id="@+id/charactersActivityCreatedString"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_toEndOf="@+id/charactersActivityCreated"
                android:gravity="end" />
        </RelativeLayout>
    </LinearLayout>
</ScrollView>